[gd_scene load_steps=6 format=3 uid="uid://b40xra3nppy27"]

[ext_resource type="Script" uid="uid://lw4jou83r4pu" path="res://UI/Option Menu/option_menu.gd" id="1_87r1q"]
[ext_resource type="Texture2D" uid="uid://cip77jt55drll" path="res://UI/Option Menu/options_menu.png" id="2_s5077"]
[ext_resource type="Texture2D" uid="uid://bdx3ouppoev2o" path="res://UI/Option Menu/toggle_on.png" id="3_gnnlw"]
[ext_resource type="Texture2D" uid="uid://nyjb8iqwfav" path="res://UI/Option Menu/toggle_off.png" id="4_at85a"]
[ext_resource type="Texture2D" uid="uid://c4dern0wbffdl" path="res://UI/Option Menu/Arrow_neutral.png" id="5_s5077"]

[node name="Option Menu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_87r1q")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 649.0
texture = ExtResource("2_s5077")
expand_mode = 2
stretch_mode = 5

[node name="musicON" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 165.0
offset_right = 537.0
offset_bottom = 308.0
scale = Vector2(0.4, 0.4)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_gnnlw")

[node name="musicOFF" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 250.0
offset_top = 165.0
offset_right = 537.0
offset_bottom = 309.0
scale = Vector2(0.4, 0.4)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_at85a")

[node name="sfxON" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 165.0
offset_right = 847.0
offset_bottom = 308.0
scale = Vector2(0.4, 0.4)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_gnnlw")

[node name="sfxOFF" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 560.0
offset_top = 165.0
offset_right = 847.0
offset_bottom = 309.0
scale = Vector2(0.4, 0.4)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_at85a")

[node name="back" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1065.0
offset_top = 47.0
offset_right = 1229.0
offset_bottom = 201.0
scale = Vector2(0.3, 0.3)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_s5077")

[connection signal="pressed" from="musicON" to="." method="_on_music_on_pressed"]
[connection signal="pressed" from="musicOFF" to="." method="_on_music_off_pressed"]
[connection signal="pressed" from="sfxON" to="." method="_on_sfx_on_pressed"]
[connection signal="pressed" from="sfxOFF" to="." method="_on_sfx_off_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
